// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lktEK"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 jTdzlo"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render always on 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lktEK"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 hvRTqG"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render disabled 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lktEK"
      disabled=""
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 bIoSPE"
      disabled=""
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 bceDMq"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render small 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lktEK"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 gIZJpw"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 izKGpU"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-sc-6s3wfu-0 lktEK"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-sc-6s3wfu-1 beOBjf"
    >
      <span
        class="Toggle__HandleInner-sc-6s3wfu-2 jTdzlo"
      />
    </div>
  </label>
</DocumentFragment>
`;
